--- a/ReHouse.FrontEnd/Views/Shared/Advert/_filters.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/Advert/_filters.cshtml
@@ -31,47 +31,12 @@
     <div class="_cost">
         @if (ViewBag.Type == AdvertsType.Sale)
         {
-            <select id="price">
-                @*<option selected value="0">Цена от</option>*@
-                @foreach (var price in Model.Prices)
-                {
-
-                    <option value="@price.Min">от @price.Min $</option>
-                    @*if (i == 0)
-                        {
-                        <option value="@Model.Prices[i].Id">до @Model.Prices[i].Max $</option>
-                        }
-                        else if (i == Model.Prices.Count - 1)
-                        {
-                        <option value="@Model.Prices[i].Id">свыше @Model.Prices[i].Min $</option>
-                        }
-                        else
-                        {
-                        <option value="@Model.Prices[i].Id">@Model.Prices[i].Min-@Model.Prices[i].Max $</option>
-                        }*@
-                }
-            </select>
-            <select id="price_max">
-                @*<option selected value="0">Цена до</option>*@
-                @foreach (var price in Model.Prices)
-                {
-
-                    <option value="@price.Min">до @price.Min $</option>
-                    @*if (i == 0)
-                        {
-                            <option value="@Model.Prices[i].Id">до @Model.Prices[i].Max $</option>
-                        }
-                        else if (i == Model.Prices.Count - 1)
-                        {
-                            <option value="@Model.Prices[i].Id">свыше @Model.Prices[i].Min $</option>
-                        }
-                        else
-                        {
-                            <option value="@Model.Prices[i].Id">@Model.Prices[i].Min-@Model.Prices[i].Max $</option>
-                        }*@
-                }
-
-            </select>
+            <div id="price">
+               <input type="number" placeholder="от" />
+            </div>
+            <div id="price_max">
+                <input type="number" placeholder="до" />
+            </div>
         }
         else if (ViewBag.Type == AdvertsType.Rent)
         {
