--- a/ReHouse.FrontEnd/Views/Sale/Detail.cshtml
+++ b/ReHouse.FrontEnd/Views/Sale/Detail.cshtml
@@ -291,9 +291,7 @@
     <span class="none">
         <div class="h2prodsale"><h2>Новинки продажи</h2></div>
     </span>
-    <div class="products">
-        <ul class="prods" id="data-container">
-            @Html.Partial("Advert/_listOfAdverts", Model.OtherAdverts)
-        </ul>
+    <div class="d-carousel" id="p">
+        @Html.Partial("Advert/_listOfAdvertsCarousel", Model.OtherAdverts)
     </div>
 </span>
