--- a/ReHouse.FrontEnd/Content/style.css
+++ b/ReHouse.FrontEnd/Content/style.css
@@ -920,9 +920,9 @@ opacity: .1;}}
         background: transparent url(images/next.png) no-repeat top right;
     }
 
-        /*.d-carousel .jcarousel-next-horizontal:hover {
+        .d-carousel .jcarousel-next-horizontal:hover {
             background: transparent url(style/images/next-g.png) no-repeat top right;
-        }*/
+        }
 
     .d-carousel .jcarousel-prev-horizontal {
         position: absolute;
@@ -934,9 +934,9 @@ opacity: .1;}}
         background: transparent url(images/prev.png) no-repeat top left;
     }
 
-        /*.d-carousel .jcarousel-prev-horizontal:hover {
+        .d-carousel .jcarousel-prev-horizontal:hover {
             background: transparent url(style/images/prev-g.png) no-repeat top left;
-        }*/
+        }
 
     .d-carousel h2 {
         margin-top: 35px;
