--- a/ReHouse.FrontEnd/Areas/Cabinet/Views/Rent/Add.cshtml
+++ b/ReHouse.FrontEnd/Areas/Cabinet/Views/Rent/Add.cshtml
@@ -337,7 +337,7 @@
                     </tr>
                 }
 
-                @if (ViewBag.ParentId != (int)ParrentCategories.Homestead)
+                @*@if (ViewBag.ParentId != (int)ParrentCategories.Homestead)
                 {
                     if (ViewBag.TrimConditions != null && ViewBag.TrimConditions.Count > 0)
                     {
@@ -346,7 +346,7 @@
                             <td>@Html.DropDownListFor(m => m.TrimConditionId, new SelectList(ViewBag.TrimConditions, "Id", "RussianName"))</td>
                         </tr>
                     }
-                }
+                }*@
                 @if (Model.AdvertPropertyValues != null && Model.AdvertPropertyValues.Count > 0)
                 {
                     for (var i = 0; i < Model.AdvertPropertyValues.Count; i++)
